# squirrel

./: LICENSE.txt  README.md  app.py  database.py  demo.json  hehe.js  package-lock.json  package.json  pyproject.toml  stella.yml  tailwind.config.js  webpack.config.js
query_builder/: database.py  ddl_generator.py  executor.py  llm_interaction.py
src/: script.js  syntax.js
static/scripts/: script.js
static/styles/: style.css
templates/: about.html  base.html  chat.html  index.html
