[tool.poetry]
name = "hacknuthon-24"
version = "0.1.0"
description = "hacknuthon 24 project"
authors = ["Shravan Asati <dev.shravan@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
mysql-connector-python = "^8.3.0"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
